# hermes-plugin-cerebro-search

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
scripts/: cerebro_search_index.py  security_scan.py
tests/: test_portability.py
